--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.example.dzmitry_slutski.rvcustomlayoutmanager"
         minSdkVersion 14
@@ -36,4 +38,8 @@ dependencies {
     compile 'com.android.support:support-v4:' + hznSupportLibsVersion
     compile 'com.android.support:appcompat-v7:' + hznSupportLibsVersion
     compile 'com.android.support:recyclerview-v7:' + hznSupportLibsVersion
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
